Styling: push width to 100%, fix the vertical alignment of cells

--- a/force-app/main/default/aura/BingoCmp/BingoCmp.css
+++ b/force-app/main/default/aura/BingoCmp/BingoCmp.css
@@ -5,7 +5,10 @@
     font-size: 200%;
 }
 
+
 .THIS td {
+    width:20vw; /* 20% of the viewport width */
+    height: 8vw;
     background: #FEC606;
     text-align: center;
     vertical-align: middle;
